fix: wrong background colors in some browsers

--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -19,6 +19,7 @@ body {
   font-family: Montserrat, sans-serif;
   color: var(--el-text-color-regular);
   overscroll-behavior: none;
+  background-color: var(--el-bg-color);
 }
 
 h1,
